@@ -573,7 +573,6 @@ _ORDERED_IMPORT_XML = """\
 </import-steps>
 """ % ( ONE_FUNC_NAME, THREE_FUNC_NAME, TWO_FUNC_NAME )
 
-
 #==============================================================================
 #   ESR tests
 #==============================================================================
