@@ -55,6 +55,15 @@ _after_import_events = []
 def handleProfileImportedEvent(event):
     _after_import_events.append(event)
 
+_METADATA_XML = """<?xml version="1.0"?>
+<metadata>
+  <version>1.0</version>
+  <dependencies>
+    <dependency>profile-bar</dependency>
+  </dependencies>
+</metadata>
+"""
+
 
 class SetupToolTests(FilesystemTestBase, TarballTester, ConformsToISetupTool):
 
@@ -490,6 +499,47 @@ class SetupToolTests(FilesystemTestBase, TarballTester, ConformsToISetupTool):
         self.assertEqual( result[ 'steps' ][ 1 ], 'dependable' )
         self.assertEqual( result[ 'steps' ][ 2 ], 'dependent' )
         self.failIf( site.purged )
+
+    def test_runAllImportStepsFromProfileWithoutDepends( self ):
+        from Products.GenericSetup.metadata import METADATA_XML
+
+        self._makeFile(METADATA_XML, _METADATA_XML)
+
+        site = self._makeSite()
+        tool = self._makeOne('setup_tool').__of__( site )
+
+        profile_registry.registerProfile('foo', 'Foo', '', self._PROFILE_PATH)
+
+        _imported = []
+        def applyContext(context):
+            _imported.append(context._profile_path)
+
+        tool.applyContext=applyContext
+        result = tool.runAllImportStepsFromProfile('profile-other:foo', ignore_dependencies=True)
+        self.assertEqual(_imported, [self._PROFILE_PATH])
+
+    def test_runAllImportStepsFromProfileWithDepends( self ):
+        from Products.GenericSetup.metadata import METADATA_XML
+
+        self._makeFile(METADATA_XML, _METADATA_XML)
+
+        site = self._makeSite()
+        tool = self._makeOne('setup_tool').__of__( site )
+
+        profile_registry.registerProfile('foo', 'Foo', '', self._PROFILE_PATH)
+        profile_registry.registerProfile('bar', 'Bar', '', self._PROFILE_PATH)
+
+        _imported = []
+        def _runImportStepsFromContext(context, steps=None, purge_old=None, profile_id=None):
+            _imported.append(profile_id)
+            return dict(steps=[], messages="")
+
+        tool._runImportStepsFromContext=_runImportStepsFromContext
+        import pdb ; pdb.set_trace()
+        result = tool.runAllImportStepsFromProfile('profile-other:foo',
+                                                   ignore_dependencies=False)
+        self.assertEqual(_imported, ["profile-other:bar", "profile-other:foo"])
+
 
     def test_runExportStep_nonesuch( self ):
 
